# llm_from_scratch

./: README.md  Taskfile.yaml  pyproject.toml  utils.py
attention/: __init__.py  models.py
dataloader/: models.py  utils.py
dataprocess/: __init__.py  dataloader.py  tokenizer.py  utils.py
dataprocess/tokenizer/: __init__.py  models.py  utils.py
fine_tuning/: train.py
gpt/: __init__.py  configs.py  models.py  utils.py
gpt/attention/: models.py
pretrain/: __init__.py  eval_funcs.py  tools.py  train_func.py  utils.py
setup/: data_prepare.py  exec.py  ftdata_preprocess.py
tests/: test_attn_flow.py  test_attn_model.py  test_dataloader.py  test_positional_emb.py  test_self_attn_model.py  test_tiktoken.py  test_token_emb.py  test_tokenizer.py
tests/attention/: test_attn_flow.py  test_attn_model.py
tests/dataprocess/: test_dataloader.py  test_positional_emb.py  test_tiktoken.py  test_token_emb.py  test_tokenizer.py
tests/gpt/: test_generate.py  test_models.py  test_norm_flow.py  test_positional_emb.py  test_shortcut.py
tests/gpt/attention/: test_attn_flow.py  test_attn_model.py
tests/pretrain/: test_decode.py  test_integrate.py  test_loss.py  test_save_load.py  test_tools.py  test_train.py
tests/tokenizer/: test_token_emb.py  test_tokenizer.py
tokenizer/: __init__.py  models.py  utils.py
view/: ft_data.ipynb  train_val_loss.py
